tests/ui/derive-invariant/helper-wrong-expr/expected
error[E0308]: mismatched types
   |
14 |     #[safety_constraint(x >= 0)]
   |                              ^ expected `&i32`, found integer
   |
help: consider dereferencing the borrow
   |
14 |     #[safety_constraint(*x >= 0)]
   |
